[gd_scene load_steps=17 format=3 uid="uid://dxu3dosyig3i8"]

[ext_resource type="Theme" uid="uid://dkoho3svds8d5" path="res://resources/ui/game_ui_theme.tres" id="1_1bpm1"]
[ext_resource type="Texture2D" uid="uid://d2xfg016s1m0w" path="res://assets/ui/popup.png" id="1_d402b"]
[ext_resource type="Script" uid="uid://dmbpxi55j21as" path="res://scenes/ui/popup/settings_popup.gd" id="1_yjfti"]
[ext_resource type="FontFile" uid="uid://bf742t4mxgd7l" path="res://assets/fonts/big_font.fnt" id="2_yjfti"]
[ext_resource type="Texture2D" uid="uid://bvstiwpyblmnv" path="res://assets/ui/close_button.png" id="3_1bpm1"]
[ext_resource type="Texture2D" uid="uid://b3a285d0cwoiy" path="res://assets/ui/settings/3.png" id="8_m1ppw"]
[ext_resource type="Texture2D" uid="uid://bc2l7ofqih1su" path="res://assets/ui/button.png" id="9_u5ssl"]
[ext_resource type="Texture2D" uid="uid://dad58vienj64d" path="res://assets/ui/settings/slider.png" id="9_uy18l"]

[sub_resource type="LabelSettings" id="LabelSettings_uy18l"]
font = ExtResource("2_yjfti")
font_size = 60

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u5ssl"]
texture = ExtResource("9_uy18l")
texture_margin_left = 4.0
texture_margin_right = 4.0
expand_margin_top = 2.0
expand_margin_bottom = 4.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 30, 6)

[sub_resource type="LabelSettings" id="LabelSettings_u5ssl"]
font = ExtResource("2_yjfti")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_6rodm"]
font = ExtResource("2_yjfti")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_rrlud"]
font = ExtResource("2_yjfti")
font_size = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gevyv"]
texture = ExtResource("9_u5ssl")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qv7tn"]
texture = ExtResource("9_u5ssl")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w41tc"]
texture = ExtResource("9_u5ssl")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="SettingsPopup" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1bpm1")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_yjfti")

[node name="OverlayColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.0352941, 0.54902, 0.870588, 0.694118)

[node name="BackgroundBoard" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(610, 480)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_d402b")
patch_margin_left = 96
patch_margin_top = 96
patch_margin_right = 96
patch_margin_bottom = 96
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="BackgroundBoard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="SettingsList" type="VBoxContainer" parent="BackgroundBoard/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MusicRow" type="HBoxContainer" parent="BackgroundBoard/MarginContainer/SettingsList"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/MusicRow"]
layout_mode = 2
text = "MUSIC"
label_settings = SubResource("LabelSettings_uy18l")
vertical_alignment = 1

[node name="SliderWraper" type="Control" parent="BackgroundBoard/MarginContainer/SettingsList/MusicRow"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="BackgroundBoard/MarginContainer/SettingsList/MusicRow/SliderWraper"]
texture_filter = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -6.5
offset_right = -223.0
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 3)
pivot_offset = Vector2(0, 6)
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("8_m1ppw")
theme_override_icons/grabber_highlight = ExtResource("8_m1ppw")
theme_override_icons/grabber_disabled = ExtResource("8_m1ppw")
theme_override_styles/slider = SubResource("StyleBoxTexture_u5ssl")
rounded = true
scrollable = false

[node name="SFXRow" type="HBoxContainer" parent="BackgroundBoard/MarginContainer/SettingsList"]
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/SFXRow"]
layout_mode = 2
text = "SFX"
label_settings = SubResource("LabelSettings_u5ssl")
vertical_alignment = 1

[node name="SliderWraper" type="Control" parent="BackgroundBoard/MarginContainer/SettingsList/SFXRow"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFXSlider" type="HSlider" parent="BackgroundBoard/MarginContainer/SettingsList/SFXRow/SliderWraper"]
texture_filter = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 104.0
offset_top = -6.5
offset_right = -220.0
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 3)
pivot_offset = Vector2(0, 6)
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("8_m1ppw")
theme_override_icons/grabber_highlight = ExtResource("8_m1ppw")
theme_override_icons/grabber_disabled = ExtResource("8_m1ppw")
theme_override_styles/slider = SubResource("StyleBoxTexture_u5ssl")
rounded = true
scrollable = false

[node name="HSeparator" type="HSeparator" parent="BackgroundBoard/MarginContainer/SettingsList"]
layout_mode = 2

[node name="ParticlesGroup" type="VBoxContainer" parent="BackgroundBoard/MarginContainer/SettingsList"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup"]
layout_mode = 2
text = "PARTICLES"
label_settings = SubResource("LabelSettings_6rodm")
horizontal_alignment = 1

[node name="SliderWraper" type="Control" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="ParticleSlider" type="HSlider" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup/SliderWraper"]
texture_filter = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -6.0
offset_right = -413.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 3)
pivot_offset = Vector2(0, 6)
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("8_m1ppw")
theme_override_icons/grabber_highlight = ExtResource("8_m1ppw")
theme_override_icons/grabber_disabled = ExtResource("8_m1ppw")
theme_override_styles/slider = SubResource("StyleBoxTexture_u5ssl")
max_value = 2.0
rounded = true
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup"]
layout_mode = 2

[node name="Off" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OFF"
label_settings = SubResource("LabelSettings_rrlud")
horizontal_alignment = 1

[node name="Low" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "LOW"
label_settings = SubResource("LabelSettings_rrlud")
horizontal_alignment = 1

[node name="High" type="Label" parent="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HIGH"
label_settings = SubResource("LabelSettings_rrlud")
horizontal_alignment = 1

[node name="ButtonsRow" type="HBoxContainer" parent="BackgroundBoard/MarginContainer/SettingsList"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="UnstuckButton" type="Button" parent="BackgroundBoard/MarginContainer/SettingsList/ButtonsRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_gevyv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qv7tn")
theme_override_styles/normal = SubResource("StyleBoxTexture_w41tc")
text = "UNSTUCK"

[node name="MenuButton" type="Button" parent="BackgroundBoard/MarginContainer/SettingsList/ButtonsRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_gevyv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qv7tn")
theme_override_styles/normal = SubResource("StyleBoxTexture_w41tc")
text = "MENU"

[node name="CloseTextureButton" type="TextureButton" parent="BackgroundBoard"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("3_1bpm1")
stretch_mode = 0

[connection signal="gui_input" from="OverlayColorRect" to="." method="_on_overlay_color_rect_gui_input"]
[connection signal="value_changed" from="BackgroundBoard/MarginContainer/SettingsList/ParticlesGroup/SliderWraper/ParticleSlider" to="." method="_on_particle_slider_value_changed"]
[connection signal="pressed" from="BackgroundBoard/MarginContainer/SettingsList/ButtonsRow/UnstuckButton" to="." method="_on_unstuck_button_pressed"]
[connection signal="pressed" from="BackgroundBoard/MarginContainer/SettingsList/ButtonsRow/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="BackgroundBoard/CloseTextureButton" to="." method="_on_close_texture_button_pressed"]
